# qrly

./: .gitignore  CELOX_IO_ANLEITUNG.md  CHANGELOG.md  CLAUDE.md  README.md  __version__.py  generate_qr_model.py  main_simple.py  pyproject.toml  pytest.ini  qrly.spec  setup.py  setup_py2app.py
.github/workflows/: build-test.yml  release.yml  test-macos-build.yml
assets/icons/: app_icon.icns
scripts/: generate_icons.py
src/qr3d/: __init__.py  app.py  generator.py
src/qrly/: __init__.py  app.py  generator.py  google_review.py
tests/: __init__.py  test_generator.py  test_gui.py  test_version.py
