[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-3d-generator"
version = "0.3.0"
description = "Desktop application and CLI tool for generating 3D-printable QR code models from URLs or images"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Martin Pfeffer", email = "noreply@github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Pillow>=10.0.0",
    "qrcode[pil]>=7.4.0",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
qr3d-gui = "qr3d.app:main"
qr3d = "qr3d.generator:main"

[tool.setuptools.packages.find]
where = ["src"]
