[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrly"
version = "0.3.3"
description = "qrly - Desktop application and CLI tool for generating 3D-printable QR code models from URLs or images"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Martin Pfeffer", email = "noreply@github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Pillow>=10.0.0",
    "qrcode[pil]>=7.4.0",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
qrly = "qrly.app:main"
qrly-cli = "qrly.generator:main"

[tool.setuptools.packages.find]
where = ["src"]
